WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57305
WKPageGetSourceForFrame and WKPageGetContentsAsString should throw an error in case of a race with page loading
https://bugs.webkit.org/show_bug.cgi?id=57305
Summary
WKPageGetSourceForFrame and WKPageGetContentsAsString should throw an error i...
Maciej Stachowiak
Reported
2011-03-28 23:52:49 PDT
WKPageGetSourceForFrame and WKPageGetContentsAsString should throw an error in case of a race with page loading
Attachments
Patch
(5.83 KB, patch)
2011-03-28 23:56 PDT
,
Maciej Stachowiak
no flags
Details
Formatted Diff
Diff
Patch
(5.91 KB, patch)
2011-03-29 00:07 PDT
,
Maciej Stachowiak
no flags
Details
Formatted Diff
Diff
Patch
(5.93 KB, patch)
2011-03-29 00:21 PDT
,
Maciej Stachowiak
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2011-03-28 23:56:30 PDT
Created
attachment 87271
[details]
Patch
Maciej Stachowiak
Comment 2
2011-03-29 00:07:52 PDT
Created
attachment 87272
[details]
Patch
Maciej Stachowiak
Comment 3
2011-03-29 00:21:45 PDT
Created
attachment 87273
[details]
Patch
Maciej Stachowiak
Comment 4
2011-03-29 00:37:39 PDT
Committed
r82206
: <
http://trac.webkit.org/changeset/82206
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug